--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -13,7 +13,7 @@ const { plant } = Astro.props;
 const { Content } = await plant.render();
 ---
 <PageLayout title={plant.slug}>
-  <nav><a href="/">Ga terug</a></nav>
+  <nav><a href="/grow/">Ga terug</a></nav>
   <main>
     <h1>{plant.data.nameCommon}</h1>
     { plant.data.nameLatin && (<h4><i>{plant.data.nameLatin}</i></h4>) }
