--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -43,8 +43,9 @@ const { title } = Astro.props;
 	}
 	nav, main {
 		margin: auto;
-		padding: 1.5rem;
+		padding: 1.2rem;
 		max-width: 60ch;
+		container-type: inline-size;
 	}
 	nav {
 		padding-block: 16px 4px;
@@ -57,13 +58,16 @@ const { title } = Astro.props;
 	}
 	input {
 		display: block;
-		margin-block: 8px 24px;
+		margin-block: 8px 12px;
 		padding-inline: 8px;
 		height: 40px;
 		width: 100%;
 	}
 	input:focus-visible {
 		outline-color: var(--green-light);
+	}
+	select {
+		padding: 8px;
 	}
 	a {
 		color: var(--purple-dark);
@@ -76,6 +80,15 @@ const { title } = Astro.props;
 	}
 	a:active {
 		color: var(--green-dark);
+	}
+	div.filters {
+		display: grid;
+		gap: 12px;
+	}
+	@container (min-width: 450px) {
+		div.filters {
+			grid-template-columns: 1fr 1fr max-content;
+		}
 	}
 	ul.search-results {
 		margin: 0;
