--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -82,6 +82,14 @@ const { title } = Astro.props;
 	a:active {
 		color: var(--green-dark);
 	}
+	a.skip-link {
+    position:absolute;
+    left:-10000px;
+    overflow: hidden;
+	}
+	a.skip-link:focus-visible{
+    position:static;
+  }
 	div.filters {
 		display: grid;
 		gap: 12px;
