--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,4 +1,7 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
+import { fade } from 'astro:transitions';
+
 export interface Props {
 	title: string;
 }
@@ -7,13 +10,14 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" transition:animate={fade({ duration: '0.2s' })}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/astro_grow/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body>
 		<slot />
@@ -22,12 +26,12 @@ const { title } = Astro.props;
 <style is:global>
 	@font-face {
 		font-family: "JaneRoe";
-		src: url('/fonts/JaneRoe-Light.ttf') format('truetype');
+		src: url('/astro_grow/fonts/JaneRoe-Light.ttf') format('truetype');
 		font-display: swap;
 	}
 	@font-face {
 		font-family: "JaneRoeBold";
-		src: url('/fonts/JaneRoe-Bold.ttf') format('truetype');
+		src: url('/astro_grow/fonts/JaneRoe-Bold.ttf') format('truetype');
 		font-display: swap;
 	}
 	:root {
