Small word-break fix

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -76,6 +76,7 @@ const { title } = Astro.props;
 	}
 	a {
 		color: var(--purple-dark);
+		word-break: break-word;
 	}
 	a:visited {
 		color: var(--purple-light);
